Changed footnote overflow to fix ugly scrollbars

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -151,7 +151,7 @@ blockquote {
 	max-width: 20em;
 	margin: 1em auto 1em auto;
 	width: 80%;
-	overflow: scroll;
+	overflow: auto;
 	clear: both;
 	opacity: 0;
 }
